--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "mongojs": "^2.6.0",
-    "mongoose": "^5.5.3",
+    "mongoose": "^5.5.4",
     "puppeteer": "^1.14.0"
   },
   "devDependencies": {},
